--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ModuloJetpack"
         tools:targetApi="31">
         <activity
+            android:name=".FormularioActivity"
+            android:exported="false" />
+        <activity
             android:name=".FloatingActionButtonActivity"
             android:exported="false" />
         <activity
@@ -25,7 +28,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".FormularioActivity"
+            android:name=".ToolBarActionBarActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
